# WoeUSB-ng

./: env-working.bash  env.bash  gtk-light.css  pyproject.toml  requirements.txt  run-test-gui.sh  run-woeusbgui.sh  scratchpad.md  setup.py  test-gtk.c  test-gui.py  wx_patch.py
WoeUSB/: gui.py  list_devices.py  tkinter_gui.py  woeusbgui.py
WoeUSBng.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
